Leave every path except a directory to zipfs in newFileSystem(Path)
FileSystems.newFileSystem(Path) tries the installed providers in an
order that is not defined, and with classgraph-vfs on the module path
the cgvfs provider comes before zipfs. The provider accepted a jarfile,
so FileSystems.newFileSystem(jar) returned a read-only VfsFileSystem
instead of a zipfs one, and it failed a path that did not exist with an
IOException, which ended the search, so zipfs could no longer create a
zipfile with Map.of("create", "true"). The provider now accepts only a
directory, which no built-in provider reads, and declines every other
path with UnsupportedOperationException. An archive can still be opened
through this provider with Vfs.open(path).asFileSystem() or a cgvfs: URI.

Also copy VfsFileChannel.transferTo through a fixed-size buffer, since
it allocated a buffer as large as the remaining content, which
overflowed for an entry of 2GB or more, and synchronize the methods
that use the channel's position, as FileChannel specifies.